[package]
name = "nickel-lang-document"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
nickel-lang-core.workspace = true
serde.workspace = true
